[WCMSFEQ-48] - Fixed coordinates of green circle with white x. It was listed correctly at 15 x 15, but part of the image was being cut off. Changed it to 16 x 16.

--- a/CancerGov/_src/StyleSheets/components/_icons.scss
+++ b/CancerGov/_src/StyleSheets/components/_icons.scss
@@ -108,7 +108,7 @@ $icon-sitewide-search-submit-height: 20px;
 	
 	&:before {
 		content: "";
-		@include sprite($x-coordinate: -438px, $y-coordinate: -260px, $width: 15px, $height: 15px);
+		@include sprite($x-coordinate: -438px, $y-coordinate: -260px, $width: 16px, $height: 16px);
 		display: inline-block;
 	}
 }
